--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
 <body>
     <section id="main_section">
         <form class='service-action-pet-create-from' action='/pet/create/' method='post'>
+            <input type="text" name="name" value="" required/>
             <div class="service-action-pet-create-btn">Создать питомца</div>
         </form>
 
