--- a/src/main/resources/templates/pet/index.html
+++ b/src/main/resources/templates/pet/index.html
@@ -13,6 +13,9 @@
 
             <h2>Параметры питомца</h2>
             <div id="htmlPet" th:utext="${htmlPet}"></div>
+
+            <h2>История жизни питомца</h2>
+            <div id="htmlPetLife" th:utext="${htmlPetLife}"></div>
         </section>
     </section>
     <div th:insert="main/index.html :: footer">
