--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,12 +4,23 @@
 </head>
 <body>
     <section id="main_section">
-        <h1>Создание питомца</h1>
+        <h1>Авторизация</h1>
 
-        <form class='service-action-pet-create-from' action='/pet/create/' method='post'>
-            <input class="css-input" type="text" name="name" value="" required/>
-            <div class="service-action-pet-create-btn btn">Создать питомца</div>
-        </form>
+        <section class="pet_login_section">
+            <h2>Создайте нового питомца</h2>
+            <form class='service-action-pet-create-form' action='/pet/create/' method='post'>
+                <input class="css-input" type="text" name="name" value="" required/>
+                <div class="service-action-pet-create-btn btn">Создать питомца</div>
+            </form>
+        </section>
+
+        <section class="pet_login_section">
+            <h2>или введите id уже существующего</h2>
+            <form class='service-action-pet-create-form' action='/pet/get-existing/' method='post'>
+                <input class="css-input" type="text" name="pet_id" value="" numeric required/>
+                <div class="service-action-pet-create-btn btn">Навестить питомца</div>
+            </form>
+        </section>
     </section>
     <div th:insert="main/index.html :: footer">
     </div>
